--- a/setting.ini
+++ b/setting.ini
@@ -6,7 +6,7 @@ startup = False
 [monitor]
 round_robin_scheduling = 10
 enable_monitor_memory = True
-data_file = D:\New Projects\PMManager\data\data.json
+data_file = data\data.json
 enable_monitor_cpu = True
 cpu_scheduling = 30
 memory_scheduling = 60
@@ -16,7 +16,7 @@ log_size = 3
 log_level = debug
 enable_console_show = True
 enable_log = True
-log_file = D:\New Projects\PMManager\logs\pro_monitor.log
+log_file = logs\pro_monitor.log
 msg_max = 8190
 console_level = info
 log_leave = 3
